# persistent-riak

./: README  persistent-riak.cabal  run-tests.hs
Database/Persist/: Riak.hs
Test/: InterfaceTest.hs
