Name:                persistent-riak
Version:             0.1
Synopsis:            Backend for the persistent library using riak.
License:             GPL-3
License-file:        LICENSE
Author:              Sebastian Hoehn
Maintainer:          sebastian.hoehn@gmail.com
Copyright:           2011, Sebastian Hoehn
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.8


Library
  -- Modules exported by the library.
  Exposed-modules:  Database.Persist.Riak
  
  -- Packages needed in order to build this package.
  Build-depends:   base               >= 4      && < 5
                 , persistent         >= 0.6.0  && < 0.7.0
                 , template-haskell   >= 2.4    && < 2.7
                 , text               >= 0.8 && < 0.12
                 , transformers       >= 0.2.1 && < 0.3
                 , containers         >= 0.2 && < 0.5
                 , bytestring         >= 0.9 && < 0.10
                 , enumerator         >= 0.4 && < 0.5
                 , riak               >= 0.6 && < 0.7
                 , network            >= 2.2.1.7
                 , compact-string-fix >= 0.3.1 && < 0.4
                 , cereal             >= 0.3.0.0
                 , path-pieces        >= 0.0 && < 0.1
                 , utf8-string        >= 0.3 && < 0.4
                 , MonadCatchIO-transformers
  
  ghc-options:   -Wall
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
Test-Suite backendImplTests
           type:                exitcode-stdio-1.0
           main-is:             ./run-tests.hs
           cpp-options:         -DTEST
           hs-source-dirs:        .
                                , ./Test
           build-depends:       base               >= 4      && < 5
                                , persistent         >= 0.6.0  && < 0.7.0
                                , template-haskell   >= 2.4    && < 2.7
                                , text               >= 0.8 && < 0.12
                                , transformers       >= 0.2.1 && < 0.3
                                , containers         >= 0.2 && < 0.5
                                , bytestring         >= 0.9 && < 0.10
                                , enumerator         >= 0.4 && < 0.5
                                , riak               >= 0.6 && < 0.7
                                , network            >= 2.2.1.7
                                , compact-string-fix >= 0.3.1 && < 0.4
                                , cereal             >= 0.3.0.0
                                , path-pieces        >= 0.0 && < 0.1
                                , utf8-string        >= 0.3 && < 0.4
                                , MonadCatchIO-transformers
                                , hspec             >= 0.6  && < 0.7
                                , HUnit             
                                , QuickCheck        >= 2    && < 3
                                , riak-protobuf     >= 0.15 && < 0.16

source-repository head
  type:       git
  location:   git://github.com/shoehn/persistent-riak.git